fixed result li copy-btn overflow

--- a/url-shortening-api-landing-page/scss/main.scss
+++ b/url-shortening-api-landing-page/scss/main.scss
@@ -363,9 +363,14 @@ a {
                         justify-content: space-between;
                         align-items: center;
 
+                        &>span {
+                            flex: 6;
+                        }
+
                         &>div {
                             @include flexContainer;
                             align-items: center;
+                            flex: 4;
                             gap: 2em;
                         }
                     }
